# miniwebp-rs

./: .gitignore  Cargo.toml  README.md
benches/: loop_filter.rs  prediction.rs  ref_test.rs
src/: lib.rs  vp8.rs  vp8_bac.rs  vp8_ipred.rs  vp8_loop_filter.rs  vp8_tokens.rs  vp8_xform.rs  webp_decoder.rs
tests/: CREDITS.md  ref_test.rs
